--- a/portfolio/templates/detail_projects.html
+++ b/portfolio/templates/detail_projects.html
@@ -1,23 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% block title %}Detalhes do Projeto{% endblock %}
+{% block content %}
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-</head>
+<h1>{{project.title}}</h1>
+<section>
+  <h4>Detalhes do Projeto</h4>
+  <p>{{project.description}}</p>
 
-<body>
-  <h1>{{project.title}}</h1>
-  <section>
-    <h4>Detalhes do Projeto</h4>
-    <p>{{project.description}}</p>
+  <h4>Tecnologias</h4>
+  <p>{{project.technologies}}</p>
 
-    <h4>Tecnologias</h4>
-    <p>{{project.technologies}}</p>
+  <a href="{{project.github}}">Github</a>
+</section>
 
-    <a href="{{project.github}}">Github</a>
-  </section>
-</body>
-
-</html>
+{% endblock %}
