--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -1,61 +1,55 @@
-{% load static %}
-<link rel="stylesheet" href="{% static " home.css" %}">
+{% extends 'base.html' %}
+{% block title %}Home{% endblock %}
+{% block content %}
 
-<!DOCTYPE html>
-<html lang="pt-br">
+<section>
+  <h1>
+    Desenvolvedor Fullstack Python | Foco em Backend, Dados e Inteligência
+    Artificial
+  </h1>
+  <p>
+    💻 Desenvolvedor entusiasta por transformar ideias em soluções eficientes e
+    escaláveis. Com 𝟭 𝗮𝗻𝗼 𝗲 𝟲 𝗺𝗲𝘀𝗲𝘀 de experiência prática no desenvolvimento de
+    sistemas, venho me especializando em Backend com Python
+  </p>
+  <p>
+    🤖 𝗜𝗻𝘁𝗲𝗹𝗶𝗴𝗲𝗻𝗰𝗶𝗮 𝗔𝗿𝘁𝗶𝗳𝗶𝗰𝗶𝗮𝗹 e Machine Learning: Atualmente, aprofundo meus
+    conhecimentos em IA e ML, com foco no desenvolvimento de sistemas baseados
+    em dados e na criação de Agentes de IA com LangChain. Busco integrar
+    inteligência às aplicações para torná-las mais autônomas e adaptáveis.
+  </p>
+  <p>
+    🛠 Desenvolvimento web: 𝗗𝗷𝗮𝗻𝗴𝗼 para criar aplicações web estruturadas com
+    regras de negócio bem definidas e Django REST Framework para desenvolver
+    APIs RESTful seguras e escaláveis. No frontend, trabalho com HTML, CSS e
+    Streamlit para interfaces simples e funcionais. Emprego Docker para
+    conteinerização e AWS na infraestrutura. Sigo princípios de POO e boas
+    práticas de arquitetura para manter código limpo e sustentável.
+  </p>
+  <p>
+    📊 Trabalho com dados e automações: Tenho sólida experiência em ETL, SQL e
+    análise de dados, utilizando 𝗣𝗮𝗻𝗱𝗮𝘀 e NumPy para processar, transformar e
+    extrair valor dos dados no PostgreSQL. Também aplico visualizações
+    interativas com Plotly, contribuindo para sistemas mais inteligentes e
+    guiados por dados.
+  </p>
+</section>
+<section>
+  <h2>Habilidades</h2>
+  <ul>
+    {% for key, date in skills.items %}
+    <li>{{ date.name }}</li>
+    {% endfor %}
+  </ul>
+</section>
+<section>
+  <h2>Contato</h2>
+  <p>
+    <a href="https://www.linkedin.com/in/breno-rodrigues77/">LinkedIn</a>
+  </p>
+  <p>
+    <a href="https://github.com/brenorodrigues77">GitHub</a>
+  </p>
+</section>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meu Portfolio</title>
-</head>
-
-<body>
-  <section>
-    <h1> Desenvolvedor Fullstack Python | Foco em Backend, Dados e Inteligência Artificial</h1>
-    <p>
-      💻 Desenvolvedor entusiasta por transformar ideias em soluções eficientes e escaláveis. Com 𝟭 𝗮𝗻𝗼 𝗲 𝟲
-      𝗺𝗲𝘀𝗲𝘀 de experiência prática no desenvolvimento de sistemas, venho me especializando em Backend com Python
-    </p>
-    <p>
-      🤖 𝗜𝗻𝘁𝗲𝗹𝗶𝗴𝗲𝗻𝗰𝗶𝗮 𝗔𝗿𝘁𝗶𝗳𝗶𝗰𝗶𝗮𝗹 e Machine Learning:
-      Atualmente, aprofundo meus conhecimentos em IA e ML, com foco no desenvolvimento de sistemas baseados em dados e
-      na criação de Agentes de IA com LangChain. Busco integrar inteligência às aplicações para torná-las mais autônomas
-      e adaptáveis.
-    </p>
-    <p>
-      🛠 Desenvolvimento web:
-      𝗗𝗷𝗮𝗻𝗴𝗼 para criar aplicações web estruturadas com regras de negócio bem definidas e Django REST Framework
-      para desenvolver APIs RESTful seguras e escaláveis. No frontend, trabalho com HTML, CSS e Streamlit para
-      interfaces simples e funcionais. Emprego Docker para conteinerização e AWS na infraestrutura. Sigo princípios de
-      POO e boas práticas de arquitetura para manter código limpo e sustentável.
-    </p>
-    <p>
-      📊 Trabalho com dados e automações:
-      Tenho sólida experiência em ETL, SQL e análise de dados, utilizando 𝗣𝗮𝗻𝗱𝗮𝘀 e NumPy para processar,
-      transformar e extrair valor dos dados no PostgreSQL. Também aplico visualizações interativas com Plotly,
-      contribuindo para sistemas mais inteligentes e guiados por dados.
-    </p>
-  </section>
-  <section>
-    <h2>Habilidades</h2>
-    <ul>
-      {% for key, date in skills.items %}
-      <li>
-        {{ date.name }}
-      </li>
-      {% endfor %}
-    </ul>
-  </section>
-  <section>
-    <h2>Contato</h2>
-    <p>
-      <a href="https://www.linkedin.com/in/breno-rodrigues77/">LinkedIn</a>
-    </p>
-    <p>
-      <a href="https://github.com/brenorodrigues77">GitHub</a>
-    </p>
-  </section>
-</body>
-
-</html>
+{% endblock %}
